--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,12 @@
     "dev": "nodemon",
     "debug": "nodemon --inspect"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "J. Winston Tokuhisa <TokuhisaWinston@Outlook.com>",
+  "license": "ISC",
+  "devDependencies": {
+    "eslint": "^4.5.0",
+    "eslint-config-airbnb-base": "^11.3.2",
+    "eslint-plugin-import": "^2.7.0",
+    "nodemon": "^1.11.0"
+  }
 }
