--- a/app/package.json
+++ b/app/package.json
@@ -11,6 +11,9 @@
   },
   "author": "J. Winston Tokuhisa <TokuhisaWinston@Outlook.com>",
   "license": "ISC",
+  "dependencies": {
+    "express": "^4.15.4"
+  },
   "devDependencies": {
     "eslint": "^4.5.0",
     "eslint-config-airbnb-base": "^11.3.2",
