--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.15.4",
-    "morgan": "^1.8.2"
+    "morgan": "^1.8.2",
+    "pg-promise": "^6.5.1"
   },
   "devDependencies": {
     "eslint": "^4.5.0",
