--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   "author": "J. Winston Tokuhisa <TokuhisaWinston@Outlook.com>",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
     "express": "^4.15.4",
     "morgan": "^1.8.2",
     "pg-promise": "^6.5.1"
