--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.17.2",
+    "ejs": "^2.5.7",
     "express": "^4.15.4",
+    "method-override": "^2.3.9",
     "morgan": "^1.8.2",
     "pg-promise": "^6.5.1"
   },
