--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "comoSayWhat",
+  "name": "como-say-what",
   "version": "1.0.0",
   "description": "a basic CRUD app created using Node and Express",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "dev": "nodemon",
+    "dev": "nodemon server.js",
     "debug": "nodemon --inspect"
   },
   "author": "J. Winston Tokuhisa <TokuhisaWinston@Outlook.com>",
